--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -103,12 +103,14 @@
 //   @return mix($color-base, $color, $level * $theme-color-interval);
 // }
 
+// scss-docs-start color-level
 @function theme-color-level($color, $level: 0) {
   $color-base: if($level > 0, $black, $white);
   $level: abs($level);
 
   @return mix($color-base, $color, $level * $theme-color-interval);
 }
+// scss-docs-end color-level
 
 // Return valid calc
 @function add($value1, $value2, $return-calc: true) {
