--- a/scss/variables/_colors.scss
+++ b/scss/variables/_colors.scss
@@ -93,6 +93,7 @@ $dark:   $gray-800 !default;
 
 $pink:  #e83e8c !default;
 
+// scss-docs-start theme-colors-map
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $theme-colors: map-merge(
@@ -108,6 +109,7 @@ $theme-colors: map-merge(
   ),
   $theme-colors
 );
+// scss-docs-end theme-colors-map
 
 // Set a specific jump point for requesting color jumps
 $theme-color-interval:  8% !default;
