--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -6,6 +6,7 @@
  * License (https://coreui.io/pro/license/)
  */
 
+ // scss-docs-start import-stack
 @import "functions";
 @import "variables";
 @import "themes";
@@ -77,3 +78,4 @@
 @import "ie-custom-properties";
 
 @import "print";
+// scss-docs-end import-stack
