--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -51,6 +51,9 @@
 @import "variables/components/close";
 @import "variables/components/code";
 
+// PRO Components
+@import "variables/components/select";
+
 // Utilities
 @import "variables/utilities";
 
